# cremniy

./: .gitignore  README.md  filestabwidget.cpp  filetab.cpp  filetab.h  mainwindow.cpp  mainwindow.ui  style.qss  welcomeform.cpp
codeeditor/: QSyntaxStyle.cpp
src/: CMakeLists.txt
src/app/WelcomeWindow/: welcomeform.cpp
src/components/codeeditor/: CMakeLists.txt
src/components/codeeditor/include/: QCXXHighlighter.hpp  QCodeEditor.hpp  QJSONHighlighter.hpp
src/components/codeeditor/resources/: codeeditor_res.qrc
src/components/codeeditor/resources/styles/: default_style.xml
src/components/codeeditor/src/: QCXXHighlighter.cpp  QCodeEditor.cpp  QJSONHighlighter.cpp  QPythonCompleter.cpp  QSyntaxStyle.cpp
